/***********************************************************************
 X3 ChangeLog

2006-07-13  Alex Schumann  <rubin@afternet.org>

	* src/opserv.c: make the bot reply from the nick you /msg in all
	cases, if commands are bound to a different bot.

	* src/nickserv.c: make the bot reply from the nick you /msg in all
	cases, if commands are bound to a different bot.

	* src/chanserv.c: make the bot reply from the nick you /msg in all
	cases, if commands are bound to a different bot.

	* src/mod-memoserv.c: Make all memoserv commands reply from the bot you
	msg, not the defined memoserv bot, if commands are aliased to other
	bots. This may also fix the crash bug playa reported at
	http://www.unrealgamers.net/forums/index.php?showtopic=138

2006-07-11  Alex Schumann  <rubin@afternet.org>

	* src/chanserv.c: Fixed some weirdness with nef 1.0's 2nd topic setter
	and some x3 topic functions.

	* x3.conf.example: Improved server/type setting documentation,
	and changed default to 5.

2006-07-11  Alex Schumann  <rubin@afternet.org>

	* src/opserv.c: fixed silent alerts not getting picked up from db file
	on read/load.

2006-07-11  Alex Schumann  <rubin@afternet.org>

	* src/opserv.c: add sanity checking to jupe to avoid catastrophic loop
	when adding an invalid jupe servername or numeric.
	this closes bug number 1513510.

	* src/modcmd.c: if pubcmd is set higher than your level, only respond
	with the denied msg if the command was actually found. this closes bug
	number 1509382.

2006-07-10  Alex Schumann  <rubin@afternet.org>

	* src/chanserv.c: fixed crash bug trying to deref the handleinfo of a
	non-logged-in user (null pointer)

2006-07-09  Alex Schumann  <rubin@afternet.org>

	* src/nickserv.c: fixed bug where unignores were getting sent to the
	user multiple times, instead of to each online nick once.

2006-07-09  Alex Schumann  <rubin@afternet.org>

	* src/nickserv.c: Fixes for addignore/delignore corruption +missed a